2010-05-19  Stefan Kost  <ensonic@users.sf.net>

	* FSM/COPYING:
	* FSM/Makefile.am:
	* FSM/COPYING (added):
	  Add a COPYING file as we have clarified the license for these long
	  ago.

	* NEWS:
	  Bump version here to so that we can test make dist.

2010-05-18  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  Update README.

	* COPYING:
	* COPYING (added):
	  Tell more about the legal status (and avoid that we get a GPL COPYING
	  file from automake placed here).
	

2010-05-18  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* exclude.lst:
	* exclude.lst (added):
	  Tell how to make a source snapshot (and include an initial exclude-list).

2010-05-17  Stefan Kost  <ensonic@users.sf.net>

	* CyanPhase/DTMF/CyanPhase_DTMF-1.txt:
	  Add a help file (not yet installed).

	* FSM/Chorus/FSM_Chorus.prs:
	* FSM/Chorus/Makefile.am:
	  Add presets.

	* configure.ac:
	  Bump version.

	* CyanPhase/DTMF/CyanPhase_DTMF-1.txt (svn:eol-style):
	* FSM/Chorus/FSM_Chorus.prs (svn:mime-type):
	* FSM/Chorus/FSM_Chorus.prs (added):
	* CyanPhase/DTMF/CyanPhase_DTMF-1.txt (added):

2010-05-13  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  Also kill shave from default args.

2010-04-16  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* shave.in (deleted):
	* shave-libtool.in (deleted):
	  Get rid of shave and switch to automake silent rules if available.

2010-01-05  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Kick/Kick.cpp:
	  whitespace.

	* Geonik/BuzzMachines/Makefile.am:
	* Geonik/BuzzMachines/Mandpluk.h:
	* Geonik/BuzzMachines/Mandpluk.sw:
	* Geonik/BuzzMachines/Omega1.cpp:
	* Geonik/BuzzMachines/PrimiFun.cpp:
	* Geonik/DspClasses/Adsr.h:
	* Geonik/DspClasses/Buffer.h:
	* Geonik/DspClasses/BuzzOsc.h:
	* Geonik/DspClasses/ColorMaps.h:
	* Geonik/DspClasses/DcOffset.cpp:
	* Geonik/DspClasses/DcOffset.h:
	* Geonik/DspClasses/Delay.h:
	* Geonik/DspClasses/DspAdd.h:
	* Geonik/DspClasses/DspClasses.cpp:
	* Geonik/DspClasses/DspClasses.h:
	* Geonik/DspClasses/Fft.h: