@@ -5,8 +5,7 @@ plugin_LTLIBRARIES = libJeskola_Freeverb.la
 libJeskola_Freeverb_la_SOURCES = allpass.cpp comb.cpp main.cpp revmodel.cpp
 libJeskola_Freeverb_la_CXXFLAGS = $(BM_CXXFLAGS)
 libJeskola_Freeverb_la_LDFLAGS = $(BM_LIBS)
-libJeskola_Freeverb_la_LIBADD = $(top_builddir)/common/dsplib/libdsplib.la \
-	$(top_builddir)/common/mdk/libmdk.la
+libJeskola_Freeverb_la_LIBADD = $(top_builddir)/common/mdk/libmdk.la
 
 noinst_HEADERS = allpass.h comb.h denormals.h main.h revmodel.h tuning.h
 
