@@ -6,3 +6,4 @@ noinst_HEADERS = mdkimp.h
 libmdk_la_SOURCES = mdkimp.cpp
 libmdk_la_CXXFLAGS = $(BM_CXXFLAGS)
 libmdk_la_LDFLAGS = $(BM_LIBS)
+libmdk_la_LIBADD = $(top_builddir)/common/dsplib/libdsplib.la
